# RayTracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMake/: CMakeLists.txt  Configure.cmake  ConfigureCuda.cmake  ConfigureNasm.cmake
CMake/Modules/: EMWebIDL.cmake  ExternalTarget.cmake  FindData2Array.cmake  FindVSEmscripten.cmake  GroupSet.cmake  LICENSE  NoWarn.cmake  README.md  StaticRuntime.cmake  VSEmscripten.cmake
Extras/: Example.md
RenderSystem/: CMakeLists.txt  rtBvObject.cpp  rtBvObject.h  rtCamera.cpp  rtCamera.h  rtClientObject.h  rtCommon.h  rtConfig.h  rtCube.cpp  rtCube.h  rtImageTarget.cpp  rtImageTarget.h  rtInteractiveCamera.cpp  rtInteractiveCamera.h  rtLight.cpp  rtLight.h  rtMaterial.cpp  rtMaterial.h  rtMesh.cpp  rtMesh.h  rtObject.cpp  rtObject.h  rtPlane.cpp  rtPlane.h  rtRenderSystem.cpp  rtRenderSystem.h  rtScene.cpp  rtScene.h  rtSphere.cpp  rtSphere.h  rtTarget.h  rtTickState.cpp  rtTickState.h  rtTimeProfile.cpp  rtTimeProfile.h
RenderSystem/CMake/: rtConfig.h.in
RenderSystem/Cpu/: rtCpuKernel.cpp  rtCpuKernel.h  rtCpuMath.cpp  rtCpuMath.h  rtCpuRenderSystem.cpp  rtCpuRenderSystem.h  rtTileManager.cpp  rtTileManager.h
RenderSystem/Cuda/: rtCuMath.cuh  rtCuMath.inl  rtCudaHostMath.h  rtCudaRenderSystem.cpp  rtCudaRenderSystem.h  rtCudaUtils.cpp  rtCudaUtils.h  rtKernel.cu
RenderSystem/Data/: rtAllocator.cpp  rtAllocator.h  rtArray.h  rtBackendTypes.h  rtCameraTypes.h  rtLightTypes.h  rtMaterialTypes.h  rtObjectTypes.h  rtSceneType.h
RenderSystem/Loader/: rtLoader.cpp  rtLoader.h
RenderSystem/Loader/Ascii/: rtAsciiLoader.cpp  rtAsciiLoader.h
RenderSystem/Loader/Blend/: CMakeLists.txt  rtBlendLoader.cpp  rtBlendLoader.h
RenderSystem/Math/: rtColor.h  rtMath.h  rtVectorTypes.h
RenderSystem/Viewer/: rtViewerImpl.cpp  rtViewerImpl.h
Samples/Viewer/: CMakeLists.txt  Main.cpp  Readme.md
